Use focus ring for PasswordPendingView eye icon

Replaces the previous dashed focus that went away in r617624.

Bug: chromium:919765
Change-Id: I0b006f5796d85d80b5bb1682120acca2793f2358
Reviewed-on: https://chromium-review.googlesource.com/c/1401450
Reviewed-by: Dana Fried <dfried@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621232}
Former-commit-id: da6d577498884601b522648e2462828cfebe82cc